# march-madness-bets

./: .gitignore  CLAUDE.md  README.md  config.json.example  pyproject.toml
docs/: methodology.md
notebooks/: March_Madness_2026_odds_compare.ipynb  matchups.json  odds.json  pinnacle.ipynb
samples/: bovada_maxbet.curl  bovada_odds.curl
src/march_madness_bets/: data.py  main.py  optimizer.py  spread_cover_rate.py
src/march_madness_bets/maps/: spread_to_cover_win_diff.json  team_names_pinnacle_to_bovada.json  team_names_silver_to_bovada.json
src/march_madness_bets/predictions/: README.md
