[project]
name = "march_madness_bets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.7.2",
    "streamlit>=1.55.0",
    "tqdm>=4.67.3",
    "scipy>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
    "matplotlib-inline>=0.2.1",
]
